--- a/src/djangobb_forum/templates/forum/base.html
+++ b/src/djangobb_forum/templates/forum/base.html
@@ -1,34 +1,54 @@
 {% load i18n analytics forum_extras %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<title>{{ forum_settings.FORUM_BASE_TITLE }} {% block title %}{% endblock %}</title>
-	<meta name="description" content="{{ forum_settings.FORUM_META_DESCRIPTION }} " />
-	<meta name="keywords" content="{{ forum_settings.FORUM_META_KEYWORDS }}" />
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html lang="ru">
+    <head>
+        <meta name="description" content="{{ forum_settings.FORUM_META_DESCRIPTION }} " />
+        <meta name="keywords" content="{{ forum_settings.FORUM_META_KEYWORDS }}" />
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Language" content="ru"/>
 
-	{% set_theme_style request.user %}
+        <meta name="ROBOTS" content="ALL"/>
+        <meta name="keywords" content="Python, Django, framework, open-source, Питон, Джанго"/>
+        <meta name="description" content="{% block description %}{% endblock %}"/>
+        <meta name="generator" content="Django"/>
+        <meta name="google-site-verification" content="zICpUlONvVLohGcE1oztBD1-qHqkAOuS-Oaim8NFW2s" />
+        <meta name='yandex-verification' content='446e96868717e10e' />
+        <meta property="og:site_name" content="DjangoBook v2.0"/>
+        <meta property="og:image" content="http://{{ site.domain }}{{ MEDIA_URL }}img/djangobook-title.png"/>
 
-	<link rel="alternate" type="application/atom+xml" href="{% url djangobb:forum_posts_feed %}" title="{% trans "Latest posts on forum" %}" />
-	<link rel="alternate" type="application/atom+xml" href="{% url djangobb:forum_topics_feed %}" title="{% trans "Latest topics on forum" %}" />
+        {# set_theme_style request.user #}
 
-	<link rel="shortcut icon" href="{{ MEDIA_URL }}forum/favicon.png" type="image/png" />
-    {% if not settings.DEBUG %}{% analytics_async "UA-3919032-6" %}{% endif %}
-	<script type="text/javascript">
-		var MEDIA_URL = "{{ MEDIA_URL }}";
-		var POST_PREVIEW_URL = "{% url djangobb:post_preview %}";
-	</script>
-    <script src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
-    {% if post %}
-		{% set_markup_editor request.user post.markup %}
-	{% else %}
-		{% set_markup_editor request.user %}
-	{% endif %}
-	{% if user.is_authenticated %}
-		<script type="text/javascript" >
-		   $(document).ready(function() {
-			$(".markup").markItUp(mySettings);
+        <link rel="alternate" type="application/atom+xml" href="{% url djangobb:forum_posts_feed %}" title="{% trans "Latest posts on forum" %}" />
+        <link rel="alternate" type="application/atom+xml" href="{% url djangobb:forum_topics_feed %}" title="{% trans "Latest topics on forum" %}" />
 
+        <title>{{ forum_settings.FORUM_BASE_TITLE }} {% block title %}{% endblock %}</title>
+
+        <link rel="stylesheet" href="{{ MEDIA_URL }}bootstrap/css/bootstrap.min.css" type="text/css"/>
+        <link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css" type="text/css"/>
+        <link rel="stylesheet" href="{{ MEDIA_URL }}css/djbook/jquery-ui-1.8.4.custom.css" type="text/css"/>
+        <link rel="stylesheet" href="{{ MEDIA_URL }}css/github.min.css">
+        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}forum/css/hljs_styles/djangobb.css" />
+
+        <link rel="shortcut icon" href="{{ MEDIA_URL }}forum/favicon.png" type="image/png" />
+        {% if not settings.DEBUG %}{% analytics_async "UA-3919032-6" %}{% endif %}
+        <script type="text/javascript">
+            var MEDIA_URL = "{{ MEDIA_URL }}";
+            var POST_PREVIEW_URL = "{% url djangobb:post_preview %}";
+        </script>
+
+        <script type="text/javascript" src="{% url js_i18n_catalog %}"></script>
+        <script src="{{ MEDIA_URL }}js/jquery-1.7.1.min.js"></script>
+        <script src="{{ MEDIA_URL }}bootstrap/js/bootstrap.min.js"></script>
+        <script src="{{ MEDIA_URL }}js/jquery-ui-1.8.4.custom.min.js"></script>
+        <script src="{{ MEDIA_URL }}js/jquery.form.js"></script>
+        <script src="{{ MEDIA_URL }}js/jquery-spelling.js"></script>
+        <script src="{{ MEDIA_URL }}js/highlight.min.js"></script>
+
+        {% block head %}{% endblock %}
+        <script type="text/javascript">
+          $(document).ready(function() {
+              hljs.tabReplace = '    ';
+              hljs.initHighlightingOnLoad();
               $.ajaxSetup({
                   beforeSend: function(xhr, settings) {
                       function getCookie(name) {
@@ -52,37 +72,38 @@
                       }
                   }
               });
-           });
-		</script>
-	{% endif %}
+          });
+        </script>
 
-    <!-- Highlightjs goodies -->
-	<script type="text/javascript" src="{{ MEDIA_URL }}forum/js/highlight.pack.js"></script>
-	<script type="text/javascript">
-		hljs.initHighlightingOnLoad();
-	</script>
-	<link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}forum/css/hljs_styles/djangobb.css" />
-	{% if highlight_word %}
-		<script type="text/javascript" src="{{ MEDIA_URL }}forum/js/jquery.highlight-3.pack.js"></script>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$("div.postmsg").highlight("{{ highlight_word }}");
-			});
-		</script>
-	{% endif %}
-	{% block extra_meta %}{% endblock %}
-</head>
-<body>
-	{% include 'forum/header.html' %}
-	{% block content %}{% endblock %}
-	<div id="brdfooter" class="block">
-	<h2><span>{% trans "Board footer" %}</span></h2>
-	<div class="box">
-		<div class="inbox">
-			{% block controls %}
-			{% endblock %}
-			<p class="conr">Powered by <a href="http://djangobb.org/">DjangoBB</a></p>
-            <p class="conr">
+        {% if post %}
+            {% set_markup_editor request.user post.markup %}
+        {% else %}
+            {% set_markup_editor request.user %}
+        {% endif %}
+
+        {% if highlight_word %}
+            <script type="text/javascript" src="{{ MEDIA_URL }}forum/js/jquery.highlight-3.pack.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function(){
+                    $("div.postmsg").highlight("{{ highlight_word }}");
+                });
+            </script>
+        {% endif %}
+        {% block extra_meta %}{% endblock %}
+    </head>
+    <body>
+        {% include "forum/_menu.html" %}
+
+        <div class="content-container">
+            {% block content %}{% endblock %}
+        </div>
+    	<div id="brdfooter" class="block">
+        	<h2><span>{% trans "Board footer" %}</span></h2>
+        	<div class="box">
+        		<div class="inbox">
+        			{% block controls %}{% endblock %}
+        			<p class="conr">Powered by <a href="http://djangobb.org/">DjangoBB</a></p>
+                    <p class="conr">
 {% if not settings.DEBUG %}
 <!--LiveInternet counter--><script type="text/javascript"><!--
 document.write("<a href='http://www.liveinternet.ru/click' "+
@@ -98,10 +119,10 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 {% else %}
 <div>Disabled in DEBUG mode</div>
 {% endif %}
-            </p>
-			<div class="clearer"></div>
-		</div>
-	</div>
-</div>
-</body>
+                    </p>
+        			<div class="clearer"></div>
+        		</div>
+        	</div>
+        </div>
+    </body>
 </html>
