--- a/src/djangobb_forum/templates/forum/forum_row.html
+++ b/src/djangobb_forum/templates/forum/forum_row.html
@@ -7,6 +7,7 @@
 {% else %}
 	<tr>
 {% endif %}
+	<td class="span1"></td>
 	<td class="tcl">
 		<div class="intd">
 			<div class="icon">
@@ -35,4 +36,5 @@
 			{% endif %}
 		{% endif %}
 	</td>
+	<td class="span1"></td>
 </tr>
