--- a/src/djangobb_forum/templates/forum/index.html
+++ b/src/djangobb_forum/templates/forum/index.html
@@ -5,17 +5,17 @@
 {% block extra_meta %}
 <script type="text/javascript" src="{{ MEDIA_URL }}forum/js/jquery.cookie.js"></script>
 <script type="text/javascript">
-	
+
 	function set_collapser(cat_id) {
 		category_body_id = "category_body_" + cat_id;
 		if($.cookie(category_body_id)){
-			item_id = "#" + category_body_id; 
+			item_id = "#" + category_body_id;
 			head_id = item_id.replace("body", "head");
 			$(head_id).addClass("collapsed");
 			$(item_id).hide()
 		}
 	}
-	$(document).ready(function(){	
+	$(document).ready(function(){
 		$("a.toggle").click(function(){
 			header_id = $(this).parent().attr('id');
 			body_id = header_id.replace("head", "body");
@@ -39,21 +39,21 @@
 {% block content %}
 <div id="idx1" class="blocktable">
 {% for iter in cats %}
-	<h2 id="category_head_{{ iter.id }}">
-		<a class="toggle" href="#">Toggle shoutbox</a>
-		<span>
-			{{ iter.cat }}
-		</span>
-	</h2>
+	<h4 id="category_head_{{ iter.id }}" class="span10">
+	    <a class="toggle" href="#">#</a>
+		<span>{{ iter.cat }}</span>
+	</h4>
 	<div class="box" id="category_body_{{ iter.id }}">
 		<div class="inbox">
 			<table cellspacing="0">
 				<thead>
 					<tr>
-						<th class="tcl" scope="col">{% trans "Forum" %}</th>
-						<th class="tc2" scope="col">{% trans "Topics" %}</th>
-						<th class="tc3" scope="col">{% trans "Posts" %}</th>
-						<th class="tcr" scope="col">{% trans "Last post" %}</th>
+						<th class="span1"></th>
+						<th class="tcl span6" scope="col">{% trans "Forum" %}</th>
+						<th class="tc2 span1" scope="col">{% trans "Topics" %}</th>
+						<th class="tc3 span1" scope="col">{% trans "Posts" %}</th>
+						<th class="tcr span2" scope="col">{% trans "Last post" %}</th>
+						<th class="span1"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -87,7 +87,7 @@
 				{% if online_count %}
 					<dt><strong>{% trans "Online:" %} </strong></dt>
 					{% for online in users_online %}
-						<dd>{{ online|profile_link }}</dd> 
+						<dd>{{ online|profile_link }}</dd>
 					{% endfor %}
 				{% endif %}
 			</dl>
