prepare index page

--- a/src/djangobb_forum/templates/forum/base.html
+++ b/src/djangobb_forum/templates/forum/base.html
@@ -97,32 +97,7 @@
         <div class="content-container">
             {% block content %}{% endblock %}
         </div>
-    	<div id="brdfooter" class="block">
-        	<h2><span>{% trans "Board footer" %}</span></h2>
-        	<div class="box">
-        		<div class="inbox">
-        			{% block controls %}{% endblock %}
-        			<p class="conr">Powered by <a href="http://djangobb.org/">DjangoBB</a></p>
-                    <p class="conr">
-{% if not settings.DEBUG %}
-<!--LiveInternet counter--><script type="text/javascript"><!--
-document.write("<a href='http://www.liveinternet.ru/click' "+
-"target=_blank><img src='//counter.yadro.ru/hit?t52.6;r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";"+Math.random()+
-"' alt='' title='LiveInternet: показано число просмотров и"+
-" посетителей за 24 часа' "+
-"border='0' width='88' height='31'><\/a>")
-//--></script><!--/LiveInternet-->
-{% else %}
-<div>Disabled in DEBUG mode</div>
-{% endif %}
-                    </p>
-        			<div class="clearer"></div>
-        		</div>
-        	</div>
-        </div>
+
+        {% include "forum/footer.html" %}
     </body>
 </html>
