--- a/src/djangobb_forum/templates/forum/index.html
+++ b/src/djangobb_forum/templates/forum/index.html
@@ -43,17 +43,15 @@
 	    <a class="toggle" href="#">#</a>
 		<span>{{ iter.cat }}</span>
 	</h4>
-	<div class="box" id="category_body_{{ iter.id }}">
+	<div class="container" id="category_body_{{ iter.id }}">
 		<div class="inbox">
-			<table cellspacing="0">
+			<table cellspacing="0" class="table table-bordered table-condensed">
 				<thead>
 					<tr>
-						<th class="span1"></th>
 						<th class="tcl span6" scope="col">{% trans "Forum" %}</th>
 						<th class="tc2 span1" scope="col">{% trans "Topics" %}</th>
 						<th class="tc3 span1" scope="col">{% trans "Posts" %}</th>
 						<th class="tcr span2" scope="col">{% trans "Last post" %}</th>
-						<th class="span1"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -66,55 +64,4 @@
 	</div>
 {% endfor %}
 </div>
-
-<div id="brdstats" class="block">
-	<h2><span>{% trans "Board information" %}</span></h2>
-	<div class="box">
-		<div class="inbox">
-			<dl class="conr">
-				<dt><strong>{% trans "Board statistics" %}</strong></dt>
-				<dd>{% trans "Total number of registered users:" %} <strong>{{ users }}</strong></dd>
-				<dd>{% trans "Total number of topics:" %} <strong>{{ topics }}</strong></dd>
-				<dd>{% trans "Total number of posts:" %} <strong>{{ posts }}</strong></dd>
-			</dl>
-			<dl class="conl">
-				<dt><strong>{% trans "User information" %}</strong></dt>
-				<dd>{% trans "Newest registered user:" %} {{ last_user|profile_link }}</dd>
-				<dd>{% trans "Registered users online:" %} <strong>{{ online_count }}</strong></dd>
-				<dd>{% trans "Guests online:" %} <strong>{{ guest_count }}</strong></dd>
-			</dl>
-			<dl id="onlinelist" class= "clearb">
-				{% if online_count %}
-					<dt><strong>{% trans "Online:" %} </strong></dt>
-					{% for online in users_online %}
-						<dd>{{ online|profile_link }}</dd>
-					{% endfor %}
-				{% endif %}
-			</dl>
-		</div>
-	</div>
-</div>
-
-{% if forum_settings.LOFI_SUPPORT %}
-<div id="brdfooter" class="block">
-	<div class="box">
-		<div class="inbox" align="center">
-			<a href="{% url djangobb:lofi_index %}">Lo-Fi Version</a>
-			<div class="clearer"></div>
-		</div>
-	</div>
-</div>
-{% endif %}
-{% endblock %}
-
-{% block controls %}
-<dl id="searchlinks" class="conl">
-	<dt><strong>{% trans "Search links" %}</strong></dt>
-	<dd><a href="{% url djangobb:search %}?action=show_24h">{% trans "Show recent posts" %}</a></dd>
-	<dd><a href="{% url djangobb:search %}?action=show_unanswered">{% trans "Show unanswered posts" %}</a></dd>
-	{% if user.is_authenticated %}
-		<dd><a href="{% url djangobb:search %}?action=show_subscriptions">{% trans "Show your subscribed topics" %}</a></dd>
-		<dd><a href="{% url djangobb:search %}?action=show_user&amp;user_id={{ request.user.id }}">{% trans "Show your posts" %}</a></dd>
-	{% endif %}
-</dl>
 {% endblock %}
